<resources>
    <string name="app_name">Movie Storage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="add">Add</string>
    <string name="sortByTitle">Title</string>
    <string name="sortByYear">Year</string>
    <string name="sortByGenre">Genre</string>
    <string name="sort_by">Sort by</string>
    <string name="add_new_movie">Add new movie</string>
    <string name="save_menu">Save</string>
    <string name="delete_menu">Delete</string>
    
    <string-array name="sort_entries">
        <item>Default</item>
        <item>Title</item>
        <item>Year</item>
        <item>Genre</item>
    </string-array>

    <string-array name="sort_values">
        <item>id</item>
        <item>title</item>
        <item>year</item>
        <item>genre</item>
    </string-array>

</resources>