<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="125dp"
    tools:context=".fragments.settings.SettingsFragment">

    <Button
        android:id="@+id/sortByTitle"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/sortByTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sortByYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sortByYear"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/sortByYear"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sortByGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByTitle" />

    <Button
        android:id="@+id/sortByGenre"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/sortByGenre"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByYear" />

</androidx.constraintlayout.widget.ConstraintLayout>