<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.update.UpdateMovieFragment">

    <EditText
        android:id="@+id/movieTitleEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/title"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/movieYearEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/year"
        android:layout_marginTop="16dp"
        android:inputType="number|numberSigned"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieTitleEditText" />

    <EditText
        android:id="@+id/movieGenreEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/genre"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieYearEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>